# calorie-tracker-app

./: .gitattributes  .gitignore  README.md
FastAPI/: .env.example  .env.test  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
FastAPI/app/: auth.py  database.py  depedencies.py  enums.py  exception_handler.py  exceptions.py  main.py  models.py  schemas.py  services.py
FastAPI/app/auth/: depedencies.py  dependencies.py  repositories.py  routers.py  schemas.py  services.py
FastAPI/app/core/: base_repository.py  config.py  db.py  enums.py  exception_handler.py  exceptions.py  logging_config.py  rate_limiting.py  redis_session.py  security.py
FastAPI/app/fridge/: dependencies.py  models.py  repositories.py  routers.py  schemas.py  services.py
FastAPI/app/meal/: dependencies.py  models.py  repositories.py  routers.py  schemas.py  services.py
FastAPI/app/measurements/: depedencies.py  dependencies.py  models.py  repositories.py  routers.py  schemas.py  services.py
FastAPI/app/models/: __init__.py  fridge.py  meals.py  user.py
FastAPI/app/routers/: auth.py  fridge.py  meals.py  measurements.py  user.py  users.py
FastAPI/app/schemas/: auth.py  fridge.py  meals.py  measurements.py  user.py
FastAPI/app/services/: auth.py  fridge.py  meals.py  measurements.py  user.py
FastAPI/app/user/: depedencies.py  dependencies.py  models.py  repositories.py  routers.py  schemas.py  services.py
FastAPI/app/utils/: crud.py  crud_fridge.py  crud_user.py  crud_user_scoped.py  enums.py  health_metrics.py
FastAPI/migrations/: env.py
FastAPI/migrations/versions/: 171a9ba4af96_add_target_weekly_gain_to_user.py  23b4f603688a_rename_meals_to_meal_logs.py  43c72f647236_initial.py  4ec84316bf18_add_meals_unique_constraint_and_update_.py  54905e0df487_refactor_meals_to_flat_meallog.py  8f270fdfe0cf_refactor_meals_add_ingredient_details.py  9997d78d485f_add_profile_and_system_fields_to_users.py
FastAPI/tests/: conftest.py  test_fridge.py
FastAPI/tests/integration/: conftest.py
FastAPI/tests/integration/auth/: conftest.py  test_auth_endpoints.py  test_auth_service.py  test_token_repository.py
FastAPI/tests/integration/core/: test_base_repository.py  test_rate_limiting.py  test_user_scoped_repository.py
FastAPI/tests/integration/fridge/: conftest.py  fridge_meal_repository.py  test_fridge_meal_endpoints.py  test_fridge_meal_ingredient_endpoints.py  test_fridge_product_endpoints.py  test_fridge_product_repository.py  test_fridge_service.py
FastAPI/tests/integration/meal/: conftest.py  test_meal_service.py  (+4 more)
(+81 files in other folders)
