[project]
name = "calorie-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for calorie tracking"
authors = [
    {name = "Maciej",email = "maciej.trznadel24@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (==0.116.1)",
    "alembic (==1.16.5)",
    "email-validator (==2.3.0)",
    "psycopg2-binary (==2.9.10)",
    "pydantic (==2.11.7)",
    "python-dotenv (==1.1.1)",
    "sqlalchemy (==2.0.43)",
    "uvicorn (==0.35.0)",
    "python-jose (==3.5.0)",
    "passlib (==1.7.4)",
    "bcrypt (==5.0.0)",
    "python-multipart (==0.0.20)",
    "zxcvbn (>=4.5.0,<5.0.0)",
    "redis (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.14.0,<0.15.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]

